--- a/src/assets/styles/components/teacher-modal-form.scss
+++ b/src/assets/styles/components/teacher-modal-form.scss
@@ -185,3 +185,17 @@
     transform: translate(-50%, -50%) scale(1);
   }
 }
+
+.dialog-content[role="dialog"] {
+  @media (max-width: 768px) {
+    // mobile styles here
+    width: 100svw;
+    height: 100svh;
+  }
+}
+
+.dialog-overlay[role="dialog"] {
+  @media (max-width: 768px) {
+    display: none;
+  }
+}
